--- a/_i18n/en/_posts/2019-12-20-從「神豬案」協作會議，看同理與對話平台的建構.md
+++ b/_i18n/en/_posts/2019-12-20-從「神豬案」協作會議，看同理與對話平台的建構.md
@@ -1,65 +1,65 @@
 ---
   layout: "post"
-  title: "The Construction of Empathy and Dialogue Platform from the Collaboration Meeting of the \"Shen Pig Case\""
-  excerpt: "The value of collaborative meetings sometimes does not lie in the extent to which public power is involved, but rather serves as a platform for communication between the divergent positions of the people."
+  title: "Empathy and dialogue building in the “Divine Pig” case"
+  excerpt: "The value of collaborative meetings is sometimes not the extent to which administrative power is enforced, but rather how much it serves as a platform for communication between dissenting positions among the people."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/6/6493bf8de04293cc04844bab441007e87becc4bc.jpeg"
-  author: "許恩恩"
+  author: "En-En Hsu"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
+### Origin
 
+In mid-August this year, netizen "Happy Mumu" proposed on the public policy network participation platform a signed case called ["Stop the Divine Pig Weight Competition Sacrifice"](https://join.gov.tw/idea/detail/09ae5b7b-b8d9-4c92-bc51-46416f4b2df4). The proposer pointed out that during the process from breeding to slaughter, the "Divine Pigs" suffer a lot of abuse and pain, so it is hoped that the weight competition can be terminated and replaced by some friendly and innovative method. The case received media attention at the endorsing stage, and it quickly broke through the threshold of 5,000 endorsements to qualify as a case in early September.
 
- ### 缘起 
+In the Executive Yuan, the mechanism for deciding what cases to conduct collaborative meetings is the "Open Government Liaison Work Promotion Conference" (referred to as "PO Monthly Meeting"). When the Participation Officer (PO) monthly meeting in October was held, the representatives of the Council of Agriculture and the Hakka Affairs Council as hosting organizations, offered to collaborate on this case. The COA PO explained at the time:
 
- In the middle of August this year, the netizen "Happy Mumu" proposed on the public policy network participation platform "[Termination of God Pig Weight Competition Rite](https://join.gov.tw / idea / detail / 09ae5b7b-b8d9-4c92-bc51-46416f4b2df4) "case, the sponsor pointed out that from breeding to slaughter, the" God Pig "suffered a variety of abuse and pain throughout the breeding process, so I hope this kind of competition The competition can be completely terminated and replaced with other friendly and innovative methods. The case received media attention at the second stage, and it quickly broke through the threshold of 5,000 second cases in early September. 
+"What are involved in this case are issues such as the people's belief culture, animal protection, and so on. Although the Council of Agriculture does not agree with the pig weight competition from the standpoint of animal protection, sometimes there is no way for the law to completely solve folk customs problems, so we must communicate with believers, contestants, and cultural and historical workers, hoping to reach a consensus on adjustments." (quoted from the [transcript](https://sayit.pdis.nat.gov.tw/2019-10-07-%E9%96%8B%E6%94%BE%E6%94%BF%E5%BA%9Cpo%E7%AC%AC%E4%B8%89%E5%8D%81%E4%BA%8C%E6%AC%A1%E6%9C%88%E6%9C%83#s332435).)
 
- The Executive Council's "Open Government Liaison Work Promotion Conference" (referred to as "PO Monthly Meeting") is the main mechanism for deciding what cases to conduct collaborative meetings. When the PO monthly meeting in October was held, the representatives of the agricultural committee and the guest committee, as the organizing agencies, offered to collaborate on this case. The PO (Open Government Liaison) of the Agriculture Commission explained at the time: 
+Under the coordination of the National Development Council, the Hakka Affairs Council that is considered to be related to the weight competition culture of the divine pig, is the main organizer, while the Ministry of the Interior and and the Ministry of Culture, responsible for religion and folk culture, are the co-organizers. In the four-ministry case, the two-month preparatory process for the "Divine Pig" issue began. On November 15th, stakeholders were invited to attend a collaborative meeting.
 
- "The issues involved in this case were issues such as the people's belief culture, animal protection, and so on. The Divine Pig Weight Contest does not agree, but sometimes the law cannot solve the problem of folklore completely. Therefore, we must communicate with the believers, the participating people, and the cultural and historical workers, hoping to reach a consensus on adjusting the practice. " [Verbatim](https://sayit.pdis.nat.gov.tw/2019-10-07-%e9%96%8b%e6%94%be%e6%94%bf%e5%ba%9cpo % e7% ac% ac% e4% b8% 89% e5% 8d% 81% e4% ba% 8c% e6% ac% a1% e6% 9c% 88% e6% 9c% 83 # s332435)) 
+### Alignment and tone setting of administrative departments
 
- Under the coordination of the National Development Council, the guest committee is considered as a co-hosting agency because it is considered to be related to the culture of the sacred pig competition. The Ministry of the Interior and Culture, which is responsible for religion and folk culture, is the co-organizer. In the case of the issue spanning four ministries, the "God Pig" issue started a two-month preparatory process. Finally, on November 15th, rights and interests and scholars and experts were invited to organize a collaborative meeting. 
+This proposal is not a brand new topic for the executive branch, and all the ministries have been involved in the business related to the Divine Pig competition. The Hakka Affairs Council, one of the organizers, also posted on Facebook this year, "Respecting the sacrifice culture and combating animal cruelty" to express the stand of the government unit. Inter-organizations first carried out the work of "cognitive alignment" within the administrative department, that is, "not using law to forcibly intervene in religious sacrifice culture" as the basic line, but using softer methods, such as counseling and reward, to gradually promote the transformation of the Divine Pig Weight Competition.
 
- ### Alignment and adjustment of the administrative department 
+The ministries agreed that it is not appropriate to intervene in religious rituals with public authority. From the point of view of the proposer's hope that the government will be more actively involved, at first glance, this option may be considered to have been narrowed in advance. However, various agencies also took the opportunity to clarify the existing measures. In particular, the Council of Agriculture has written to the local government to strengthen the guidance of the temples, religious groups, and pig breeders within their jurisdiction who still hold sacred pig rituals, and track and manage the feeding. The Hakka Affairs Council drew up the historical context of the Divine Pig Competition and pointed out its connection with the Hakka culture. The Ministry of Culture and the Ministry of the Interior also publicly expressed their stance on the transformation of the sacrifice rituals.
 
- This proposal is not a new topic for the administrative department, and all the ministries have dealt with the business related to the God Pig competition. The guest committee, one of the organizers, posted a post on Facebook this year, "Respecting the sacrifice culture and combating animal cruelty." Therefore, in the preparation process, cross-administrative departments quickly aligned their cognition, that is, "not using law to forcibly intervene in religious sacrifice culture" as the basic line, but to gradually promote god pigs by using softer methods such as counseling and reward. The transformation of competition. 
+Therefore, from the standpoint of the "Divine Pig Weight Competition," all the agencies and the proposer share the same goal, that is, to allow the existing form of Divine Pig sacrifices to be changed to a certain degree. It is only that the means of intervention needs to consider the people's religious freedom. The government departments have actually expressed the core value of "respecting folk beliefs," and hoped to discuss them on this premise.
 
- The authorities agree that it is not appropriate to intervene in religious rituals with public authority. Since the proponents want the government to be more actively involved, it appears that this option has been curtailed in advance. However, various agencies here have clarified the existing relevant measures, especially the Agricultural Committee has written to the local government to strengthen the guidance of the temples, religious groups and pig breeders who still hold the sacred pig rituals in their jurisdiction, and track and manage the feeding Happening. The Hakka Committee drew up the historical context of the Divine Pig Competition and pointed out the connection with the Hakka culture. The Ministry of Culture and the Ministry of the Interior also publicly expressed their stance on the transformation of rituals. 
+### Admit opinions during the preparatory phase, and set issues for discussion
 
- Therefore, from the standpoint of the "God Pig Competition", all agencies are consistent with the goals of the sponsors, that is, to allow the existing form of saint pig sacrifices to be changed to a certain degree. Religious freedom, then discuss how to intervene. The government department also expressed the core value of "respecting folk beliefs" and hoped to discuss on this premise. 
+After the basic tone was established, each ministry began to interview the stakeholders, including the proposer, the animal protection group, the temples that hold the Divine Pig Weight Competition and are supposed to transform, the believers who participated in the competition, the Divine Pig raisers, the main agencies of animal protection in the county and city governments, and experts and scholars. Since the positions of the administrative departments have reached a consensus and are quite firm, policy communication has been initiated from the preparatory stage. But in the process, it was found that the parties in the civil society have different priorities and their respective positions on the competition also scattered between the two ends of the spectrum.
 
- ### Adopting opinions during the preparatory phase and setting of discussion issues 
+First of all, the process of raising the pigs is difficult to standardize. The law violations of animal abuse need to be determined based on the facts of each case. The representatives of the Ministry followed the local government ’s animal protection office to visit the actual site of the pig farmers. What they saw was indeed different from the previous situation of the animal protection group's evidence, which showed the importance of case identification. The temples believe that the key lies in the believers. However, the motivation for the competition is often a dynamic process between the believers and the temples, rather than being driven in one direction. It is also affected by changes in external ideas, policy encouragement, and changes in the social and economic structure. The cultural value and historical context of sacrifice that believers care about are also difficult to measure directly under the same standards as animal welfare.
 
- After the basic tone has been established, each department will begin to interview the stakeholders, including the sponsor, the animal protection group, and the sacred pig. Competitions and transformed temples, believers who have participated in the competition of God Pigs, pig farmers of God Pigs, the county ’s and municipal government ’s animal protection authorities and experts and scholars. Since the positions of the administrative departments have reached a consensus and are quite firm, policy communication has been initiated from the preparatory stage, but it is also in the process that it is found that the private parties are paying different attention to their respective positions on the God Pig Competition. Scattered at each end of the spectrum. 
+As a result, colleagues from various agencies and the PDIS team decided to set the case as a more inclusive theme—"How to discuss the possibilities of alternative rituals on the premise that the people are spontaneous?"
 
- Firstly, it is difficult to generalize whether the process of raising pigs constitutes an illegal torture of animals. It must be determined based on the facts of the case. The representatives of the Ministry followed the local government ’s animal protection office to visit the actual site of the pig farmers. What they saw was indeed different from the previous situation of the animal protection group's proof, and it also showed the importance of case identification. In addition, the temple believes that the key to changing the competition is the believers. However, the motivation of the competition is often a dynamic process between the believer and the temple, rather than being driven in one direction. It is more influenced by changes in external ideas, policy encouragement and Affected by changes in socio-economic structure. The cultural value and historical context of sacrifice that believers care about are also difficult to measure directly under the same standards as animal welfare. 
+In the actual operation of the meeting, there were mainly two-stage group discussions. In the first half, "How to encourage believers to choose pigs raised in a natural way to sacrifice to God?" to ensure that we did not completely exclude the option of raising pigs. In the second half, "How to encourage believers to use different ways to repay God?" in response to the request of the proponent to carry out a stimulus of transformation forms and incentives.
 
- Thus, colleagues from various agencies and the PDIS team decided to set this case as a more inclusive theme: "How to discuss the possibilities of alternative rituals on the premise of the spontaneity of the people?" 
+### The diverse composition of the scene brings tension and dynamics
 
- The actual operation of the meeting In the first half, there were mainly two-stage group discussions. In the first half, "How to encourage believers to choose pigs raised in natural ways to sacrifice God?" To ensure that we did not completely exclude the option of raising pigs, and returned to "How to Encourage believers to use different ways to repay God? "To respond to the proponent's appeal, and stimulate the form of transformation and incentives. 
+At the beginning of the collaborative meeting, the groups were broken up, so that the temples, pig farmers, animal protection agencies, case proposers and endorsers, experts and scholars, and representatives from various ministries were seated around different groups. As mentioned earlier, even if the administrative authorities unanimously determined that there would be no compulsory involvement in the sacrificial culture, the position on the competition was actually quite obvious. The pig farmers at the scene felt "targeted" and some wanted to leave even before the group discussion.
 
- ### The diverse composition of the scene brings dynamic tension 
+The working team, herein, in addition to ensuring a friendly atmosphere at the scene, also needed to persuade and communicate outside the meeting area. The team originally thought that the conflict might be imminent. However, after entering the group discussion, a temple representative on the spot, who was from the temple that successfully transformed to the creative solution from the Divine Pig Competition, played the role of being able to empathize and identify with the pig farmers in a timely manner. The pig farmers, therefore, were willing to stay in their seats.
 
- The seat of the collaboration meeting was broken up at the beginning, so that temple parties, pig farmers, animal protection groups, sponsors, sponsors, experts and scholars And representatives of various ministries and conferences, sitting in different groups. As mentioned earlier, even if the administrative authorities unanimously determined that there would be no compulsory involvement in the sacrificial culture, their position on the competition is actually quite obvious, so the pig farmers at the scene felt "targeted" so that they had not entered the group discussion. Someone wants to leave. 
+Although the animal protection groups, with very firm positions different from the pig farmers, also realized that it was very precious for the farmers and temples to be willing to come to Taipei from faraway and to endure voices that might be completely opposed to their job for survival. Therefore, even if they put forward sharp arguments, they were still willing to soften their attitude in a timely manner, and mentioned their common ideas with the pig farmers and temples. The public sector representatives not only explained their positions and existing actions, but could also play a neutral and integrating role, and even further deconstruct the situation on the demand side, and propose alternative possibilities.
 
- In addition to ensuring the friendly atmosphere at the scene, the working team also needs to communicate and persuade outside the meeting area. The team originally thought that the conflict might be imminent. However, after entering the group discussion, a scene representative from the temple successfully transformed the creative scheme from the pig competition, played the role of being able to empathize and identify with the pig farmers in a timely manner. Willing to stay in the seat. 
+Relying on the communication between the agencies before hand, and the mutual understanding of the invitees, this collaborative meeting, which might have been parted on bad terms, was successfully completed in the end even if there were several highly-intensified discussion situations.
 
- An animal protection group with a different stance from pig farmers also realizes that pig farmers and temples from far away are willing to come to Taipei and endure that there may be voices on the scene that are completely opposed to the work on which they depend. It is an invaluable thing. Therefore, even if the position is firm and the arguments are relatively sharp, the animal protection groups are still willing to soften their attitudes in a timely manner and propose where they share common ideas with pig farmers and temples. And the public sector representatives not only explain their positions and existing actions, they can also play a neutral and integrated role, and even further deconstruct the situation on the demand side, and propose alternative possibilities. 
+### Review of the soul of the meeting: Public Service PO
 
- Relying on the organization's prior communication and the mutual understanding of the invitees, this collaboration meeting, which might have been unhappy for a time, was successfully completed together after several high-level discussions. 
+The preparation process of more than a month before the meeting was the key to the successful completion of this afternoon's collaborative meeting. In addition to "internal communication" to establish a consistent benchmark for all agencies, it is more important to use this benchmark to empathize with all stakeholders and allow people with extremely different positions to listen to each other and sit together till the end of the meeting.
 
- ### The soul of reviewing and presiding: Public servants PO 
+At the same time, at the micro level, what was relied on was the on-site host, who treated all participants equally, gathered all opinions fairly and clearly, and promptly reminded the meeting to set the tone and the issues to focus. The moderator of this meeting came from the PDIS team, and most of the discussions were held in group, relying on three POs from the Ministry of the Interior, the General Accounting Office, and the Engineering Society.
 
- The preparation process of up to two months before the meeting is the key to the successful completion of this collaborative meeting. In addition to "internal communication", let various agencies establish a consistent benchmark, but more importantly, colleagues of all agencies can use this benchmark to understand all stakeholders and allow people with extremely different positions to listen to each other and sit together at the conference. At last. At the same time, at a more micro level, what is relied on is that the host at the scene treats all participants without discrimination and gathers all opinions fairly and clearly, reminding the meeting to adjust the situation and the issues that are currently focused. The moderator of this meeting came from the PDIS team, and the group discussions, which accounted for most of the meeting, relied on three POs from the Ministry of the Interior, the General Accounting Office and the Engineering Society as the small table leaders of each group (the review moderator). Lead discussions in groups. 
+The three POs personally participated in the preparation process of working meetings, pre-meetings, etc., and grasped the development of the case before serving as the small table heads (review moderators) of each group. They carefully read the conference manual and did their homework carefully on the topic content. Prior to the formal meeting, the three POs also spent time with the PDIS team to "sandbox" deduce possible discussion scenarios. Together, they designed a "tool list" to assist in the discussion.
 
- Before that, the three POs personally participated in all preparatory processes such as working meetings, pre-meetings, etc., and carefully read the conference manuals. They had done their homework on the topics, so they could fully grasp the dynamics of the case. Prior to the formal meeting, the three POs also had time with the PDIS team to "sandbox" possible discussion scenarios, and together they designed a "tool list" to assist in the discussion. 
+On the day of the meeting, POs took full advantage of the "hosting" technology that open government liaisons should have, allowing participants to reach effective dialogue within a limited time.
 
- On the day of the meeting, the three POs took full advantage of the "hosting" technology that an open government liaison should possess, allowing participants to reach an effective dialogue within a limited time. 
+### Not only the public sectors, collaborative meetings can also be a platform for people talking with people
 
- ### Not only the public sector, collaboration meetings can also be a platform for the people and the people 
+Collaboration meetings have developed close to sixty themes so far, each of which looks different due to the nature of its issues, the policy stage, and the status of its stakeholders. This case had a high degree of social concern, which touched on different fields such as animal protection and religious sacrifice. The stakeholders of all parties had different thinking directions and positions. If it had not established the discussion issues at each stage first, or the moderator couldn't have guided in a timely manner, the discussion process had been very likely to diverge and fall into the state of each sticking to their own words.
 
- The development of collaboration meetings has been close to sixty, each due to the nature of its issues, policy stage, and status of stakeholders. Grow different looks. This case has a high degree of social concern. It touches on different areas such as animal protection and religious sacrifice, and stakeholders of all parties have different thinking directions and positions. If the discussion issues at each stage are not established first, or the moderator cannot guide them in a timely manner, the discussion process is likely to diverge and fall into the state of each word. 
+As mentioned earlier, the government agencies limited the bottom line for public authority intervention and did not play the role of enforcer in this case, but all units were still actively participating in the preliminary preparation and internal and external communication processes, and the non-ministry POs also devoted to it. Therefore, what we see in this case is that, as a deliberative meeting within the system, the focus of the collaborative conference is not necessarily on the level of public authority intervention, but rather letting the administrative department as the builder of the platform so that the diverse voices of the people can have a field of mutual listening and understanding. The invitations from various ministries also made the conference more diverse.
 
- As mentioned earlier, government agencies have established a bottom line for public power intervention, and did not play the role of enforcer in this case, but all units are still actively participating in the preliminary preparation and internal and external communication processes, even if they are not related to the ministry. PO is also fully committed to it. Therefore, what we see in this case is that as a deliberative meeting within the system, the focus of the collaborative conference is not necessarily on the degree of public power's involvement. Instead, the administrative department can be used as the builder of the platform, and the diverse voices of the people can have mutual interaction. The field of listening and understanding. The presence of invitations from various ministries and conferences has also made the conference more diverse. 
-
- Whether from the perspective of the proponent, the animal protection group, or the temple or pig farmer, although no measures have been concluded to completely satisfy either party, all parties can fully clarify the current situation and express Show what you care about and ensure that government units act as a boundary between inaction and inaction. The value of this collaborative meeting is that when the conflict between religious sacrifice culture and humanitarian values occurs, the seemingly incomprehensible and opposing parties can have a chance to see each other's true situation, and also promote the parties to move towards "same reason" A small step forward. 
+No matter from the perspective of the proposer, the animal protection group, or the temples, or pig farmers, although the measures to completely satisfy any party have not been summarized, all parties can fully clarify the current situation and express their own opinions to ensure the boundary between action and inaction of the government units. The value of this collaborative meeting is that when the conflict between religious sacrifice culture and humanitarian values occurs, the seemingly incomprehensible and opposing parties can have a chance to see each other's true situations, and also promote the parties to move a small step towards mutual empathy.
