--- a/_i18n/en/_posts/2019-12-27-公民之國，在花之中.md
+++ b/_i18n/en/_posts/2019-12-27-公民之國，在花之中.md
@@ -1,31 +1,30 @@
 ---
   layout: "post"
-  title: "Citizen's land among flowers"
-  excerpt: "The pursuit of democracy for hundreds of years has formed a multicultural and intercultural identity with civil society as the main body."
+  title: "Striking back at the “impending doom”"
+  excerpt: "After a few hundred years of pursuit toward democracy, it has formed a transcultural identity with civil society enshrined as its main body."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/6/6cde9aac68d11d417e106f5b0582fd973fd14355_2_1380x776.jpeg"
-  author: "唐鳳、彭筱婷、黃子維"
+  author: "Audrey Tang, Sheau-Tyng Peng, Zach Huang"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+The term "sense of impending doom" has appeared suddenly earlier this year. It became a popular keyword right away on Taiwan's Internet. It has even been nicknamed a "mango feeling".
 
- At the beginning of this year, the term "sense of demise" suddenly appeared, and it immediately became a popular keyword on Taiwan's Internet, and was even nicknamed "mango sense". 
+As Ms Chang Chuan-fen has identified in her [opening article](https://www.upmedia.mg/news_info.php?SerialNo=75174), this discussion about a "sense of impending doom" reflects a collective sentiment. Many people are feeling anxious or even helpless.
 
- As stated by Mr. Zhang Juanfen in [First Article](https://www.upmedia.mg/news_info.php?serialno=75174), the discussion of this sense of "desperation" reflects that A collective emotion. Many people are anxious and even weak. 
+Where does this "impending doom" come from? In my opinion, it mainly stems from a fear of loss.
 
- Where does the "Sense of Destiny" come from? In my opinion, it mainly comes from the fear of loss. 
+However, our participation in the creation of democracy is our best defence. This is because the process of hand-building our democracy enables us to experience concrete implementation and gain confidence in continuous progress. At the same time, every person living in Taiwan can use their collective effort to confront the risks and challenges all democracies are facing.
 
- However, as long as we participate in the creation of democracy, we are the best defense. Because, the process of building democracy by hand will let us experience the real and steadfast, and gain confidence of continuous progress. At the same time, all people living in this land of Taiwan can face the crisis of democracy together due to their efforts. 
+"Why don't we decide Taiwan's affairs for ourselves?" This is the most direct question on the dust jacket of [this book](https://www.sanmin.com.tw/Product/index/007389883). I hope that all readers, apart from reading this book to find answers, could also actively participate in creating democratic opportunities. Even the smallest beginning may kindle the spark of a greater movement.
 
- "Why didn't we decide on Taiwan's affairs ourselves?" This is a broken alarm bell on the waist of the book "The Counterattack of the Sense of Desolation". I hope that all readers, in addition to reading this book to find answers, should also actively participate in creating democratic opportunities. Even the smallest start may be the starting point of Spark. 
+From its Austronesian languages to its new inhabitants, Taiwan has long been the cradle of numerous lineages and cultures since ancient times. After a few hundred years of pursuit toward democracy, it has formed a transcultural identity with civil society enshrined as its main body.
 
- From the Austronesian family to the new inhabitants, since ancient times, Taiwan has always been the cradle of many bloodlines and cultures. After centuries of democratic pursuit, it has formed a multicultural and intercultural identity with civil society as the main body. 
+Accordingly, I would like to share a short poem to echo Mr Liu Wai-tong's [new interpretation](https://www.upmedia.mg/news_info.php?SerialNo=75328) of "Mínguó" — a country based on participatory democracy:
 
- Therefore, I want to respond to the new interpretation of the "Republic of China"-"to "People-oriented" Republic of China "": 
-
-> The ocean of mother-in-law, the island of beauty; 
-> The country of citizens is in the flowers. 
-> 
-> Swirling ocean, beautiful islands: 
-> A transcultural republic of citizens. 
+> Swirling ocean, beautiful islands:
+> A transcultural republic of citizens.
+>
+> 婆娑之洋，美麗之島；
+> 公民之國，在花之中。
