--- a/_posts/2019-12-27-公民之國，在花之中.md
+++ b/_posts/2019-12-27-公民之國，在花之中.md
@@ -17,7 +17,7 @@ tags:
 
 不過，只要我們參與民主的創造，就是最好的防衛。因為，親手打造民主的過程，會讓我們體驗到再真實不過的踏實，獲得持續進步的自信。同時，所有生活在臺灣這塊土地的人們，都可以因為彼此的努力，共同面對民主的危機。
 
-「臺灣的事情，為什麼不是我們自己決定？」這是《亡國感的逆襲》書腰上，單刀直入的破題警鐘。我希望所有的讀者，除了閱讀本書尋找解答，也要積極參與創造民主的機會。哪怕是再微小的開始，都可能是星火燎原的起點。
+「臺灣的事情，為什麼不是我們自己決定？」這是[《亡國感的逆襲》](https://www.sanmin.com.tw/Product/index/007389883)書腰上，單刀直入的破題警鐘。我希望所有的讀者，除了閱讀本書尋找解答，也要積極參與創造民主的機會。哪怕是再微小的開始，都可能是星火燎原的起點。
 
 從南島語系到新住民，自古以來，臺灣一向是許多血脈、各種文化的搖籃。經過數百年以來的民主追求，更形成了以公民社會為主體，多元交織的跨文化認同。
 
