--- a/_posts/2019-12-27-公民之國，在花之中.md
+++ b/_posts/2019-12-27-公民之國，在花之中.md
@@ -9,19 +9,19 @@ tags:
 - 社會創新
 ---
 
-今年初，「亡國感」這個說法突然出現，旋即成為臺灣網路上的熱門關鍵字，甚至被戲稱為「芒果感」。
+🥭 今年初，「亡國感」這個說法突然出現，旋即成為臺灣網路上的熱門關鍵字，甚至被戲稱為「芒果感」。
 
-誠如張娟芬老師在[首篇文章中](https://www.upmedia.mg/news_info.php?SerialNo=75174)所指陳，這股「亡國感」的討論，反映的是一種集體情緒。許多人因此焦慮不已，甚至深感無力。
+📖 誠如張娟芬老師在[首篇文章中](https://www.upmedia.mg/news_info.php?SerialNo=75174)所指陳，這股「亡國感」的討論，反映的是一種集體情緒。許多人因此焦慮不已，甚至深感無力。
 
-「亡國感」究竟從何而來？在我看來，主要源自對於失去的恐懼。
+🌊 「亡國感」究竟從何而來？在我看來，主要源自對於失去的恐懼。
 
-不過，只要我們參與民主的創造，就是最好的防衛。因為，親手打造民主的過程，會讓我們體驗到再真實不過的踏實，獲得持續進步的自信。同時，所有生活在臺灣這塊土地的人們，都可以因為彼此的努力，共同面對民主的危機。
+⛰️ 不過，只要我們參與民主的創造，就是最好的防衛。因為，親手打造民主的過程，會讓我們體驗到再真實不過的踏實，獲得持續進步的自信。同時，所有生活在臺灣這塊土地的人們，都可以因為彼此的努力，共同面對民主的危機。
 
-「臺灣的事情，為什麼不是我們自己決定？」這是[《亡國感的逆襲》](https://www.sanmin.com.tw/Product/index/007389883)書腰上，單刀直入的破題警鐘。我希望所有的讀者，除了閱讀本書尋找解答，也要積極參與創造民主的機會。哪怕是再微小的開始，都可能是星火燎原的起點。
+💡 「臺灣的事情，為什麼不是我們自己決定？」這是[《亡國感的逆襲》](https://www.sanmin.com.tw/Product/index/007389883)書腰上，單刀直入的破題警鐘。我希望所有的讀者，除了閱讀本書尋找解答，也要積極參與創造民主的機會。哪怕是再微小的開始，都可能是星火燎原的起點。
 
-從南島語系到新住民，自古以來，臺灣一向是許多血脈、各種文化的搖籃。經過數百年以來的民主追求，更形成了以公民社會為主體，多元交織的跨文化認同。
+💐 從南島語系到新住民，自古以來，臺灣一向是許多血脈、各種文化的搖籃。經過數百年以來的民主追求，更形成了以公民社會為主體，多元交織的跨文化認同。
 
-因此，我想以一首小詩，呼應廖偉棠老師[文中](https://www.upmedia.mg/news_info.php?SerialNo=75328)所提的「民國」新解—「以民為本的『民國』」：
+🖊️ 因此，我想以一首小詩，呼應廖偉棠老師[文中](https://www.upmedia.mg/news_info.php?SerialNo=75328)所提的「民國」新解—「以民為本的『民國』」：
 
 > 婆娑之洋，美麗之島；
 > 公民之國，在花之中。
