--- a/_i18n/en/_posts/2019-12-27-公民之國，在花之中.md
+++ b/_i18n/en/_posts/2019-12-27-公民之國，在花之中.md
@@ -9,19 +9,21 @@
     - "Social Innovation"
 ---
 
-The catchphrase “sense of impending doom” emerged out of nowhere earlier this year. It quickly set Taiwan’s Internet alight and attracted a nickname: “mango feeling.”
+### Book Review: «Striking Back at the Impending Doom»
 
-As Ms Chang Chuan-fen has identified in her [opening article](https://www.upmedia.mg/news_info.php?SerialNo=75174), discussion about “sense of impending doom” reflects a collective sentiment. Many people are feeling anxious or even helpless.
+🥭 The catchphrase “sense of impending doom” emerged out of nowhere earlier this year. It quickly set Taiwan’s Internet alight and attracted a nickname: “mango feeling.”
 
-Where does “impending doom” come from? In my opinion, it mainly stems from a fear of loss.
+📖 As Ms Chang Chuan-fen has identified in her [opening article](https://www.upmedia.mg/news_info.php?SerialNo=75174), discussion about “sense of impending doom” reflects a collective sentiment. Many people are feeling anxious or even helpless.
 
-But there is a cure for this malaise: participation in the creation of Taiwan’s democracy. This is because the step-by-step process affords all actors the opportunity to experience concrete implementation and gain confidence in continuous progress. At the same time, every soul in Taiwan can act collectively in overcoming the challenges and risks faced by democracies the world over. 
+🌊 Where does “impending doom” come from? In my opinion, it mainly stems from a fear of loss.
 
-“Why don’t we decide Taiwan’s affairs for ourselves?” This is the most direct question on the dust jacket of [the book](https://www.sanmin.com.tw/Product/index/007389883). I hope all readers, apart from reading to find answers, will join in creating democratic opportunities. Even the smallest beginning may kindle the spark of a greater movement.
+⛰️ But there is a cure for this malaise: participation in the creation of Taiwan’s democracy. This is because the step-by-step process affords all actors the opportunity to experience concrete implementation and gain confidence in continuous progress. At the same time, every soul in Taiwan can act collectively in overcoming the challenges and risks faced by democracies the world over.
 
-Taiwan is the cradle of numerous lineages and cultures since ancient times. Austronesian languages and new inhabitants are the some of the more recent hallmarks of this reality. After a few hundred years of pursuing democracy, Taiwan has formed a transcultural identity with civil society enshrined as its main body.
+💡 “Why don’t we decide Taiwan’s affairs for ourselves?” This is the most direct question on the dust jacket of [the book](https://www.sanmin.com.tw/Product/index/007389883). I hope all readers, apart from reading to find answers, will join in creating democratic opportunities. Even the smallest beginning may kindle the spark of a greater movement.
 
-Thus, I would like to share a short poem to echo Mr Liu Wai-tong’s [new interpretation](https://www.upmedia.mg/news_info.php?SerialNo=75328) of “Mínguó” — a country based on participatory democracy:
+💐 Taiwan is the cradle of numerous lineages and cultures since ancient times. Austronesian languages and new inhabitants are the some of the more recent hallmarks of this reality. After a few hundred years of pursuing democracy, Taiwan has formed a transcultural identity with civil society enshrined as its main body.
+
+🖊️ Thus, I would like to share a short poem to echo Mr Liu Wai-tong’s [new interpretation](https://www.upmedia.mg/news_info.php?SerialNo=75328) of “Mínguó” — a country based on participatory democracy:
 
 > Swirling ocean, beautiful islands:
 > A transcultural republic of citizens.
