--- a/_posts/2019-12-27-公民之國，在花之中.md
+++ b/_posts/2019-12-27-公民之國，在花之中.md
@@ -13,7 +13,7 @@ tags:
 
 📖 誠如張娟芬老師在[首篇文章中](https://www.upmedia.mg/news_info.php?SerialNo=75174)所指陳，這股「亡國感」的討論，反映的是一種集體情緒。許多人因此焦慮不已，甚至深感無力。
 
-🌊 「亡國感」究竟從何而來？在我看來，主要源自對於失去的恐懼。
+🌊 「亡國感」究竟從何而來？在我看來，主要源自對於失去自由的恐懼。
 
 ⛰️ 不過，只要我們參與民主的創造，就是最好的防衛。因為，親手打造民主的過程，會讓我們體驗到再真實不過的踏實，獲得持續進步的自信。同時，所有生活在臺灣這塊土地的人們，都可以因為彼此的努力，共同面對民主的危機。
 
