--- a/_i18n/en/_posts/2019-12-27-公民之國，在花之中.md
+++ b/_i18n/en/_posts/2019-12-27-公民之國，在花之中.md
@@ -15,7 +15,7 @@
 
 📖 As Ms Chang Chuan-fen has identified in her [opening article](https://www.upmedia.mg/news_info.php?SerialNo=75174), discussion about “sense of impending doom” reflects a collective sentiment. Many people are feeling anxious or even helpless.
 
-🌊 Where does “impending doom” come from? In my opinion, it mainly stems from a fear of loss.
+🌊 Where does “impending doom” come from? In my opinion, it mainly stems from a fear of losing freedom.
 
 ⛰️ But there is a cure for this malaise: participation in the creation of Taiwan’s democracy. This is because the step-by-step process affords all actors the opportunity to experience concrete implementation and gain confidence in continuous progress. At the same time, every soul in Taiwan can act collectively in overcoming the challenges and risks faced by democracies the world over.
 
