--- a/_i18n/en/_posts/2019-12-30-這支臺灣隊伍-連紐西蘭都說讚.md
+++ b/_i18n/en/_posts/2019-12-30-這支臺灣隊伍-連紐西蘭都說讚.md
@@ -1,23 +1,24 @@
 ---
   layout: "post"
-  title: "Apple Column: This Taiwan team praises New Zealand"
-  excerpt: "Coincidentally, there is another important water-related innovation in China recently, which is the \"Mountain and River Event Book\"."
+  title: "Even New Zealand is full of praises about this Taiwanese team"
+  excerpt: "There is another important water-related innovation in Taiwan: the “Mountain River Event Book”."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/b/bb375b329c3db06919d997e90a9b437dc6a683c2_2_1380x776.jpeg"
-  author: "唐鳳、黃子維"
+  author: "Audrey Tang, Zach Huang"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+### Even New Zealand is full of praises about this Taiwanese team
 
- 🏡 In the middle of this month, I was invited to attend the “Homeland Wisdom Patrol Team”, one of the top ten teams in this year ’s “Presidential Cup Hackathon”, and held a presentation conference with the Lightning Lab of New Zealand to learn about the “Homeland Wisdom Patrol” How to "guard the team" in just one week, with the assistance of two senior consultants from Lightning Lab (Mentor), to review and strengthen [Water Box](https://issuu.com/pdis. tw / docs / friday_wrap-up_presentation _-_ water_box) This innovative application scenario and possible business models. 
+🏡 In the middle of this month, I was invited to a presentation conducted jointly by the ["Water Box"](https://issuu.com/pdis.tw/docs/friday_wrap-up_presentation_-_water_box) team, one of the top 10 teams in this year's Presidential Hackathon, and New Zealand's Lightning Lab to learn how they have managed in just one week to review and reinforce the innovative application scenario of Water Box and its possible business models with the assistance of two mentors from New Zealand.
 
- 🇳🇿 Also present were representatives of the New Zealand Commercial and Industrial Office. Both the two experienced consultants and the senior diplomats of New Zealand gave high praise to the achievements of the "Homeland Patrol Team". 
+🇳🇿 The presentation was also attended by representatives from the New Zealand Commercial and Industrial Office. The mentors and senior diplomats were extravagant in their praises of the achievement of the Water Box team.
 
- 🌾 The members of the "Homeland Wisdom Patrol Team" are from the National Taipei University of Science and Technology, the Textile Industry Comprehensive Research Institute, the 事务所 Environmental Technologists' Office, Heshuo United Technology Co., Germany's Ge-Komm Company and Taiwan's ECOCEO Open. group. They continued the concept and practice of the internationally renowned citizen technology success case "Air Box" to create a "Water Box" with reasonable cost and wide deployment. In the future, the "Water Box" will automatically collect data such as water quality, water volume, and the changing cycle of the hydrological environment, hoping to strengthen the prediction, prevention, and control of various pollution sources, thereby reducing the negative impact on agricultural water use. 
+🌾 Members of the Water Box team come from the National Taipei University of Science and Technology, the Textile Industry Research Institute, Chen Yang Environmental Technologist Office, Pegatrono Corporation, Germany's Ge-Komm Corporation and Taiwan's ECOCEO Open Community. They have extrapolated the concept and practice of the internationally renowned successful citizen technology program "Air Box" to create a reasonably cost and widely deployable Water Box. In the future, the Water Box will automatically collect data such as water quality, water volume and the changing cycle of the hydrological environment. Hopefully, this device will strengthen the prediction, prevention and management of different pollution sources and reduce the negative impact on agricultural water use.
 
- 💯 Coincidentally, there is another important water-related innovation in China in the near future, that is, "[山河 事 事件](https://riverlog.lass-net.org/)" has been awarded IoT Data Application Contest ". 
+💯 Furthermore, there is another important water-related innovation in Taiwan: ["Mountain River Event Book"](https://riverlog.lass-net.org), the recent winner of NTD 1 million prize from the Civil IoT Data Application Competition.
 
- 🏞️ The Mountain and River Event Book adheres to the spirit of open source and self-made, compiling open data on hydrology, climate, and hydrology of the public Internet of People's Livelihood. Through visual icons, it presents the dynamics of water elephants throughout Taiwan, and cares about the water level. Changing people can query the rainfall, water level, tidal level and operation status of pumping stations in various regions, and use satellite data and other information sources for preliminary analysis to help understand the circumstances and causes of flooding events. 
+🏞️ The Mountain and River Event Book adheres to the spirit of open source and self-creation. It integrates open data such as hydrology, climate and hydrology in the Civil IoT network. Using visualization to display the dynamics of water status across Taiwan, it allows anyone in the community who cares about changes in water levels to query the rainfall, water level, tidal level and pumping station operational status in various regions, and use satellite information and other information sources to carry out preliminary analysis in order to understand the circumstances and causes of flooding events.
 
- 🏆 Whether it is the "President's Cup hack loose" or the "People's Livelihood Public IoT Data Application Contest", we have discovered that the master is in the folk. In my opinion, the limited government resources and endless civil power, through the partnership of citizens in data governance, to solve specific social problems and promote global sustainable development are in itself a very valuable innovation that deserves praise from people. 
+🌏 Whether it is in the Presidential Hackathon or the Civil IoT Data Application Competition, I believe we have found many experts in the community. Government resources are limited, while civil power is limitless. Solving specific social problems and promoting global sustainable development through citizen-cooperative data governance partnerships is a precious innovation in itself and deserves to be praised by the people of Taiwan.
